--- a/backend/src/main/webapp/app/views/menu/search.html
+++ b/backend/src/main/webapp/app/views/menu/search.html
@@ -67,7 +67,7 @@
 						<i class="fa fa-picture-o fa-lg" 
 						   ng-class="{'user-status-enabled-icon': m.image.id, 'comm-cursor-pointer': m.image.id}" 
 						   ng-click="m.image.id ? getImage(m.image.id) : null"></i>
-						<span class="fa fa-star user-status-enabled-icon" ng-show="m.isRecommented"></span>
+						<span class="fa fa-star" style="color: #EC971F;" ng-show="m.isRecommented"></span>
 						
 					</td>
 					<td class="comm-vert-align-center">{{ m.name}}</td>
