--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -1,39 +1,23 @@
+        
 <div>
 	<div class="col-lg-6">
-		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="form-inline" ng-hide="isEdit">
-				<label>{{'user.addpage.auto_gen' | translate}}</label>
-				<input type="checkbox" value="" ng-model="autoGen" ng-change="autoGenEvent()">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
-				<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
+		<form name="addForm" role="addForm" ng-submit="isEdit ? update() : save()" novalidate>
+			<div class="form-group" ng-class="{'has-error':addForm.userNameShow.$invalid || existingUserShowErrMsg}">
+				<label class="control-label">{{'menu.addpage.form.menu_name' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
 				</span>
 				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
-				<label class="control-label">{{'user.addpage.username' | translate}} *</label>
+			<div class="form-group" ng-class="{'has-error':addForm.userName.$invalid || existingUserErrMsg}">
+				<label class="control-label">{{'menu.addpage.form.menu_price' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
 				</span>
-				<input name="userName" class="form-control" ng-model="user.userName" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
+				<input name="userName" type="number" class="form-control" ng-model="user.userName" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
-				<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-				<input name="password" class="form-control" type="password" ng-model="user.password" ng-disabled="isEdit || autoGen" ng-required="!isEdit">
-				<p class="help-block" ng-show="autoGen">{{'user.addpage.generated_password_msg' | translate}} {{ user.password }}</p>
-			</div>
-			<div class="form-group" ng-show="!autoGen" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
-				<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
-				<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-				</span>
-				<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-				ng-change="notMatchRepassErrMsg = null" ng-disabled="isEdit" ng-required="!isEdit && !autoGen">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
+			<div class="form-group" ng-class="{'has-error':addForm.roles.$invalid}">
+				<label class="control-label">{{'menu.addpage.form.menu_type' | translate}} *</label>
 				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
 					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
 			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
@@ -41,18 +25,33 @@
 			    </select>
 			</div>
 			<div class="form-group">
-                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+				<label class="control-label">{{'menu.addpage.form.menu_img' | translate}}</label>
+				<input type="file" nv-file-select uploader="uploader"/><br/>
+			</div>
+			<div class="form-group">
+                 <label>{{'menu.addpage.form.status' | translate}} &nbsp;&nbsp;</label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="1" ng-checked="user.enabled == 1" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
+                     <input type="radio" name="status" value="1" ng-checked="enabled == 1" ng-model="enabled">{{'menu.addpage.form.status_enable' | translate}}
                  </label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="0" ng-checked="user.enabled == 0" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
+                     <input type="radio" name="status" value="0" ng-checked="enabled == 0" ng-model="enabled">{{'menu.addpage.form.status_disable' | translate}}
                  </label>
+                 <label class="checkbox-inline" style="margin-left: 20px;">
+	                  <input type="checkbox">{{'menu.addpage.form.is_recommented' | translate}}
+	            </label>
              </div>
 			<div style="text-align: center;">
 				<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
-				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
+				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addForm.$invalid">{{ persisBtn }}</button>
 			</div>
 		</form>
 	</div>
+	
+	<div class="col-lg-6">
+		<button ng-click="testing()">yo</button>
+		<div ng-repeat="item in uploader.queue">
+			<div ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, width: 300 }"></div>
+		</div>
+	</div>
+	
 </div>
