--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -7,14 +7,14 @@
 				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
 				</span>
-				<input name="menuName" class="form-control" ng-model="menuName" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
+				<input name="menuName" class="form-control" ng-model="menu.name" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error':addForm.menuPrice.$invalid || existingUserErrMsg}">
 				<label class="control-label">{{'menu.addpage.form.menu_price' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
 				</span>
-				<input name="menuPrice" type="number" class="form-control" ng-model="menuPrice" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
+				<input name="menuPrice" type="number" class="form-control" ng-model="menu.price" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
 			</div>
 			<!-- <div class="form-group" ng-class="{'has-error':addForm.roles.$invalid}">
 				<label class="control-label">{{'menu.addpage.form.menu_type' | translate}} *</label>
@@ -32,13 +32,13 @@
 			<div class="form-group">
                  <label>{{'menu.addpage.form.status' | translate}} &nbsp;&nbsp;</label>
                  <label class="radio-inline">
-                     <input type="radio" name="status" value="1" ng-checked="status == 1" ng-model="status">{{'menu.addpage.form.status_enable' | translate}}
+                     <input type="radio" name="status" value="1" ng-checked="menu.status == 1" ng-model="menu.status">{{'menu.addpage.form.status_enable' | translate}}
                  </label>
                  <label class="radio-inline">
-                     <input type="radio" name="status" value="0" ng-checked="status == 0" ng-model="status">{{'menu.addpage.form.status_disable' | translate}}
+                     <input type="radio" name="status" value="0" ng-checked="menu.status == 0" ng-model="menu.status">{{'menu.addpage.form.status_disable' | translate}}
                  </label>
                  <label class="checkbox-inline" style="margin-left: 20px;">
-	                  <input type="checkbox" ng-model="isRecommented">{{'menu.addpage.form.is_recommented' | translate}}
+	                  <input type="checkbox" ng-model="menu.isRecommented">{{'menu.addpage.form.is_recommented' | translate}}
 	            </label>
              </div>
 			<div style="text-align: center;">
@@ -49,7 +49,7 @@
 	</div>
 	
 	<div class="col-lg-6">
-		<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" ng-show="imgUpload">
+		<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" ng-show="imageSource">
 	</div>
 	
 </div>
