--- a/backend/src/main/webapp/app/views/menu/search.html
+++ b/backend/src/main/webapp/app/views/menu/search.html
@@ -82,7 +82,7 @@
 					</td>
 					<td class="comm-vert-align-center">
 						<i class="fa fa-times fa-lg user-action-icon" ng-click="deleteUser(m.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon" ng-click="editUser(m)"></i>
+						<i class="fa fa-edit fa-lg user-action-icon" ng-click="editMenu(m)"></i>
 					</td>
 				</tr>
 			</tbody>
