--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -26,7 +26,7 @@
 			</div> -->
 			<div class="form-group well well-sm">
 				<label class="control-label">{{'menu.addpage.form.menu_img' | translate}}</label>
-				<input name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+				<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 				       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" />
 			</div>
 			<div class="form-group">
