--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -16,14 +16,14 @@
 				</span>
 				<input name="menuPrice" type="number" class="form-control" ng-model="menu.price" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
 			</div>
-			<!-- <div class="form-group" ng-class="{'has-error':addForm.roles.$invalid}">
+			<div class="form-group" ng-class="{'has-error':addForm.menuTypes.$invalid}">
 				<label class="control-label">{{'menu.addpage.form.menu_type' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
-					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
-			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+				<select name="menuTypes" class="form-control" ng-model="menu.menuTypeId" required>
+					<option value="">{{'menu.search.form.type_dropdown_msg' | translate}}</option>
+			      	<option ng-selected="{{ menu.menuTypeId == option.id }}" 
+			      			ng-repeat="option in menuTypes" value="{{ option.id }}">{{ option.name }}</option>
 			    </select>
-			</div> -->
+			</div>
 			<div class="form-group well well-sm">
 				<label class="control-label">{{'menu.addpage.form.menu_img' | translate}}</label>
 				<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
