--- a/backend/src/main/webapp/app/views/menu/search.html
+++ b/backend/src/main/webapp/app/views/menu/search.html
@@ -81,8 +81,8 @@
 						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="m.status"></i>
 					</td>
 					<td class="comm-vert-align-center">
-						<i class="fa fa-times fa-lg user-action-icon" ng-click="deleteMenu(m.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon" ng-click="editMenu(m)"></i>
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteMenu(m.id)"></i>&emsp;
+						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editMenu(m)"></i>
 					</td>
 				</tr>
 			</tbody>
