--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -74,8 +74,8 @@
 					</td>
 					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy'}}</td>
 					<td>
-						<i class="fa fa-times fa-lg user-action-icon" ng-click="deleteUser(u.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon" ng-click="editUser(u)"></i>
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteUser(u.id)"></i>&emsp;
+						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editUser(u)"></i>
 					</td>
 				</tr>
 			</tbody>
