--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -4,12 +4,21 @@
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
-.user-action-icon {
+.user-action-icon-primary {
 	color: #337AB7; cursor: pointer;
+}
+.user-action-icon-danger {
+	color: #C9302C; cursor: pointer;
 }
 .user-status-enabled-icon {
 	color: #337AB7;
 }
 .user-status-disabled-icon {
 	color: #C11B1A;
+}
+.comm-vert-align-center {
+	vertical-align: middle !important;
+}
+.comm-cursor-pointer {
+	cursor: pointer;
 }
