--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -163,7 +163,7 @@
 												<td><input type="text" class="form-control" ng-model="i.unitPrice"></td>
 												<td><input type="text" class="form-control" ng-model="i.price"></td>
 												<td>
-													<i class="fa fa-times fa-lg user-action-icon" style="margin-left: 7px;" ng-click="deleteUser(u.id)"></i>&emsp;
+													<i class="fa fa-times fa-lg user-action-icon-danger" style="margin-left: 7px;" ng-click="deleteUser(u.id)"></i>&emsp;
 												</td>
 											</tr>
 										</tbody>
