--- a/backend/src/main/webapp/app/views/menu_type/main.html
+++ b/backend/src/main/webapp/app/views/menu_type/main.html
@@ -25,7 +25,7 @@
 							    <tr ng-repeat="mt in menuTypes">
 							      <td class="comm-vert-align-center">
 							        <span editable-text="mt.name" e-name="name" e-form="rowform" onbeforesave="checkName($data)">
-							          {{ mt.name }}
+							          <i class="fa fa-caret-right fa-2x"></i> <span style="font-size: 20px;">{{ mt.name }}</span>
 							        </span>
 							      </td>
 							      <td class="comm-vert-align-center">
