--- a/backend/src/main/webapp/app/views/table_land/main.html
+++ b/backend/src/main/webapp/app/views/table_land/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">{{'menu_type.header_title' | translate}}</h1>
+			<h1 class="page-header">{{'table_land.header_title' | translate}}</h1>
 		</div>
 	</div>
 	
@@ -9,13 +9,11 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-indent fa-fw"></i> {{'menu_type.header_panel' | translate}}
+                    <i class="fa fa-square fa-fw"></i> {{'table_land.header_panel' | translate}}
                 </div>
                 <div class="panel-body">
                 	
-                	
-                	<tableland tablename="6" colour="primary" type="cutlery" goto="login" ng-repeat="t in tables"></tableland>
-                	
+                	<div ui-view></div>
                 	
                 </div>
                 <div class="panel-footer"></div>
