--- a/backend/src/main/webapp/app/views/table_manage/main.html
+++ b/backend/src/main/webapp/app/views/table_manage/main.html
@@ -75,7 +75,7 @@
 							    <tr ng-repeat="t in tables">
 							      <td class="comm-vert-align-center">
 							        <span editable-text="t.name" e-name="name" e-form="rowform" onbeforesave="checkName($data)">
-							          <i class="fa fa-cutlery fa-2x"> <code>{{ t.name }}</code></i>
+							          <span style="font-size: 20px;">{{ t.name }}</span>
 							        </span>
 							      </td>
 							      <td class="comm-vert-align-center">
