--- a/backend/src/main/webapp/app/views/table_land/main.html
+++ b/backend/src/main/webapp/app/views/table_land/main.html
@@ -9,7 +9,10 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-square fa-fw"></i> {{'table_land.header_panel' | translate}}
+                    <i class="fa fa-square fa-fw"></i> {{ headerTitle }}
+                    <button ng-show="formData.isEditMode" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
+                    	<i class="fa fa-long-arrow-left"></i>
+                    </button>
                 </div>
                 <div class="panel-body">
                 	
