--- a/backend/src/main/webapp/app/views/sale/main.html
+++ b/backend/src/main/webapp/app/views/sale/main.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
+                    <i class="fa fa-shopping-cart fa-fw"></i> {{ headerTitle }}
                     <button ng-show="formData.isDetailMode" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
