--- a/backend/src/main/webapp/app/views/sale/detail.html
+++ b/backend/src/main/webapp/app/views/sale/detail.html
@@ -16,19 +16,26 @@
 			<tbody>
 				<tr ng-repeat="or in orders">
 					<td class="comm-vert-align-center">{{ $index + 1 }}</td>
-					<td class="comm-vert-align-center">{{ or.menu.name}}</td>
+					<td class="comm-vert-align-center" ng-class="{'comm-line-through': or.isCancel}">{{ or.menu.name}}</td>
 					<td class="comm-vert-align-center">{{ or.menu.menuType.name}}</td>
-					<td class="comm-vert-align-center">{{ or.amount }}</td>
+					<!-- <td class="comm-vert-align-center">{{ or.amount }}</td> -->
+					<td>
+						<a href="#" ng-if="!or.isCancel" editable-number="or.amount" e-style="width: 80px" onbeforesave="updateAmount($data, or.id, this)">{{ or.amount }}</a>
+						<span ng-if="or.isCancel">{{ or.amount }}</span>
+					</td>
 					<td class="comm-vert-align-center">{{ or.menu.price }}</td>
 					<td class="comm-vert-align-center">{{ or.menu.price * or.amount }}</td>
 					<td class="comm-vert-align-center">
-						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="or.status"></i>
-						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="or.status"></i>
-						<i class="fa fa-suitcase fa-lg user-status-enabled-icon" ng-show="or.isTakeHome"></i>
+						<i class="fa fa-refresh fa-lg" ng-if="or.status == 0 && !or.isCancel"></i>
+						<i class="fa fa-refresh fa-lg fa-spin" style="color: #5CB85C;" ng-if="or.status == 1 && !or.isCancel"></i>
+						<i class="fa fa-check-circle fa-lg fa-lg user-status-enabled-icon" ng-if="or.status == 2 && !or.isCancel"></i>
+						
+						<i class="fa fa-minus-circle fa-lg fa-lg user-status-disabled-icon" ng-if="or.isCancel"></i>
+						&emsp;
+						<i class="fa fa-suitcase fa-lg" style="color: #EC971F;" ng-show="or.isTakeHome"></i>
 					</td>
 					<td class="comm-vert-align-center">
-						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteMenu(or.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editMenu(or)"></i>
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-if="!or.isCancel" ng-click="deleteOrder(or.id)"></i>
 					</td>
 				</tr>
 			</tbody>
