--- a/backend/src/main/webapp/app/views/sale/search.html
+++ b/backend/src/main/webapp/app/views/sale/search.html
@@ -2,9 +2,10 @@
 <div class="col-lg-12">
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 		<form class="form-inline">
-		  <div class="form-group">
-		    <input type="text" class="form-control" placeholder="{{'sale.search.form.cus_ref_hint' | translate}}" ng-model="$parent.formData.ref" ng-keyup="search()">
-		  </div>
+		  	<div class="form-group input-group">
+                <input type="text" class="form-control" placeholder="{{'sale.search.form.cus_ref_hint' | translate}}" ng-model="$parent.formData.ref" ng-keyup="search()">
+                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+            </div>
 		</form>
 	</div>
 </div>
