--- a/backend/src/main/webapp/app/views/menu/search.html
+++ b/backend/src/main/webapp/app/views/menu/search.html
@@ -75,7 +75,7 @@
 					</td>
 					<td class="comm-vert-align-center">{{ m.name}}</td>
 					<td class="comm-vert-align-center">{{ m.menuType.name}}</td>
-					<td class="comm-vert-align-center">{{ m.price }}</td>
+					<td class="comm-vert-align-center">{{ m.price | number:2 }}</td>
 					<td class="comm-vert-align-center">
 						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="m.status"></i>
 						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="m.status"></i>
