--- a/backend/src/main/webapp/app/views/kitchen/main.html
+++ b/backend/src/main/webapp/app/views/kitchen/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">{{'sale.header_title' | translate}}</h1>
+			<h1 class="page-header">{{'kichen.header_title' | translate}}</h1>
 		</div>
 	</div>
 	
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-btc fa-fw"></i> {{ headerTitle }}
+                    <i class="fa fa-lightbulb-o fa-fw"></i> {{'kichen.header_panel' | translate}}
                     <button ng-show="formData.isDetailMode" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
