--- a/backend/src/main/webapp/app/views/sale/search.html
+++ b/backend/src/main/webapp/app/views/sale/search.html
@@ -26,4 +26,6 @@
 </div>
 
 <sale tablename="{{ c.tableDetail }}" cusname="{{ c.ref }}" colour="{{ c.status == 1 ? 'red' : 'primary' }}" type="cutlery" 
-	  goto="dashboard.sale.detail({ cusId: {{c.id}}, tableDetail: {{c.tableDetail}}, ref: '{{c.ref}}', status: '{{c.status}}' })" ng-repeat="c in customers"></sale>
+	  goto="dashboard.sale.detail({ cusId: {{c.id}}, tableDetail: {{c.tableDetail}}, ref: '{{c.ref}}', status: '{{c.status}}', 
+	  receiveAmount: {{c.cashReceiveAmount}}, changeCash: {{c.changeCash}}, totalPrice: {{c.totalPrice}} })" 
+	  ng-repeat="c in customers"></sale>
