--- a/backend/src/main/webapp/app/views/kitchen/search.html
+++ b/backend/src/main/webapp/app/views/kitchen/search.html
@@ -56,7 +56,7 @@
 	<div class="col-lg-4">
 	    <div class="panel panel-green">
 	        <div class="panel-heading">
-	            <i class="fa fa-refresh fa-fw fa-spin"></i> {{'kichen.panel.header_doing' | translate}}
+	            <i class="fa fa-refresh fa-fw fa-spin"></i> {{'kichen.panel.header_doing' | translate}} {{ ordersDoing.length }} {{'kichen.item' | translate}}
 	        </div>
 	        
 	        <div class="panel-body">
@@ -109,7 +109,7 @@
 	<div class="col-lg-4">
 	    <div class="panel panel-primary">
 	        <div class="panel-heading">
-	            <i class="fa fa-check-circle fa-fw"></i> {{'kichen.panel.header_finished' | translate}}
+	            <i class="fa fa-check-circle fa-fw"></i> {{'kichen.panel.header_finished' | translate}} {{ ordersFinished.length }} {{'kichen.item' | translate}}
 	        </div>
 	        
 	        <div class="panel-body">
